--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			</div>
 
 		<p>
-			&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; From childhood's hour I have not been
+			<h6>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; From childhood's hour I have not been
 			&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 			&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;As others were -- I have not seen
 			&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
@@ -62,6 +62,7 @@
 			(When the rest of Heaven was blue)&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 			&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 			Of a demon in my view --
+		</h6>
 		</p>
 			
 		</p>
